// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo secretstore mapping create "frodo secretstore mapping create --global -i default-keystore -s am.uma.resource.labels.mtls.cert -a new,new2,new3 -m classic": should create mapping for the global default-keystore secret store 1`] = `""`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create --global -i default-keystore -s am.uma.resource.labels.mtls.cert -a new,new2,new3 -m classic": should create mapping for the global default-keystore secret store 2`] = `
"✔ Created the mapping am.uma.resource.labels.mtls.cert in the secret store default-keystore.
"
`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create --global -i default-keystore -s am.uma.resource.sets.mtls.cert -a new,new2,new,new3 --type classic": should fail due to duplicate aliases 1`] = `
"✖ Error: Error creating mapping 'am.uma.resource.sets.mtls.cert' for the / realm secret store 'default-keystore'
Error creating mapping 'am.uma.resource.sets.mtls.cert' for the / realm secret store 'default-keystore'
  Network error:
    URL: http://openam-frodo-dev.classic.com:8080/am/json/global-config/secrets/stores/KeyStoreSecretStore/default-keystore/mappings?_action=create
    Status: 400
    Code: ERR_BAD_REQUEST
    Reason: Bad Request
    Message: Data validation failed for the attribute, Aliases
"
`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create --global -i default-keystore -s am.uma.resource.sets.mtls.cert -a new,new2,new,new3 --type classic": should fail due to duplicate aliases 2`] = `1`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create --secretstore-id ESV --secret-id am.services.uma.pct.encryption --aliases esv-test-server-cert,esv-test-server-cert-2": should fail since only one alias is allowed for the mapping 1`] = `
"✖ Error: Error creating mapping 'am.services.uma.pct.encryption' for the alpha realm secret store 'ESV'
Error creating mapping 'am.services.uma.pct.encryption' for the alpha realm secret store 'ESV'
  Network error:
    URL: https://openam-frodo-dev.forgeblocks.com/am/json/realms/root/realms/alpha/realm-config/secrets/stores/GoogleSecretManagerSecretStoreProvider/ESV/mappings?_action=create
    Status: 400
    Code: ERR_BAD_REQUEST
    Reason: Bad Request
    Message: Invalid config: Only a single alias per mapping is allowed for this secret store type
"
`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create --secretstore-id ESV --secret-id am.services.uma.pct.encryption --aliases esv-test-server-cert,esv-test-server-cert-2": should fail since only one alias is allowed for the mapping 2`] = `1`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create -gi EnvironmentAndSystemPropertySecretStore --secretstore-type EnvironmentAndSystemPropertySecretStore -s am.services.uma.pct.encryption -a new -m classic": should fail since no mappings can exist for the EnvironmentAndSystemPropertySecretStore 1`] = `
"Errored ➞ GET http://openam-frodo-dev.classic.com:8080/am/json/serverinfo/* _PollyError: [Polly] [adapter:node-http] Recording for the following request is not found and \`recordIfMissing\` is \`false\`.
{
  "url": "http://openam-frodo-dev.classic.com:8080/am/json/serverinfo/*",
  "method": "GET",
  "headers": {
    "accept": "application/json, text/plain, */*",
    "content-type": "application/json",
    "user-agent": "@rockcarver/frodo-lib/4.0.0-36",
    "x-forgerock-transactionid": "frodo-22f4cbc9-4991-4064-a063-2f5ae97cd250",
    "accept-api-version": "resource=1.1",
    "accept-encoding": "gzip, compress, deflate, br",
    "host": "openam-frodo-dev.classic.com:8080"
  },
  "body": "",
  "recordingName": "secretstore/mapping-create/0_gi_secretstore-type_s_a_m/am",
  "id": "ccd7a5defd0fdeaa986a2b54642d911a",
  "order": 0,
  "identifiers": {
    "method": "GET",
    "url": "/am/json/serverinfo/*"
  },
  "config": {
    "mode": "replay",
    "adapters": [
      "node-http"
    ],
    "logLevel": "warn",
    "flushRequestsOnStop": true,
    "recordIfMissing": false,
    "recordFailedRequests": true,
    "expiresIn": null,
    "expiryStrategy": "warn",
    "matchRequestsBy": {
      "method": true,
      "headers": false,
      "body": true,
      "order": false,
      "url": {
        "protocol": false,
        "username": false,
        "password": false,
        "hostname": false,
        "port": false,
        "pathname": true,
        "query": true,
        "hash": true
      }
    }
  }
}
    at assert (/snapshot/dist/app.cjs:143614:11)
    at FrodoNodeHttpAdapter.assert (/snapshot/dist/app.cjs:157395:5)
    at FrodoNodeHttpAdapter.replay (/snapshot/dist/app.cjs:157384:10)
    at async FrodoNodeHttpAdapter.handleRequest (/snapshot/dist/app.cjs:157268:7)
Error getting tokens
  [Polly] [adapter:node-http] Recording for the following request is not found and \`recordIfMissing\` is \`false\`.
{
  "url": "http://openam-frodo-dev.classic.com:8080/am/json/serverinfo/*",
  "method": "GET",
  "headers": {
    "accept": "application/json, text/plain, */*",
    "content-type": "application/json",
    "user-agent": "@rockcarver/frodo-lib/4.0.0-36",
    "x-forgerock-transactionid": "frodo-22f4cbc9-4991-4064-a063-2f5ae97cd250",
    "accept-api-version": "resource=1.1",
    "accept-encoding": "gzip, compress, deflate, br",
    "host": "openam-frodo-dev.classic.com:8080"
  },
  "body": "",
  "recordingName": "secretstore/mapping-create/0_gi_secretstore-type_s_a_m/am",
  "id": "ccd7a5defd0fdeaa986a2b54642d911a",
  "order": 0,
  "identifiers": {
    "method": "GET",
    "url": "/am/json/serverinfo/*"
  },
  "config": {
    "mode": "replay",
    "adapters": [
      "node-http"
    ],
    "logLevel": "warn",
    "flushRequestsOnStop": true,
    "recordIfMissing": false,
    "recordFailedRequests": true,
    "expiresIn": null,
    "expiryStrategy": "warn",
    "matchRequestsBy": {
      "method": true,
      "headers": false,
      "body": true,
      "order": false,
      "url": {
        "protocol": false,
        "username": false,
        "password": false,
        "hostname": false,
        "port": false,
        "pathname": true,
        "query": true,
        "hash": true
      }
    }
  }
}
"
`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create -gi EnvironmentAndSystemPropertySecretStore --secretstore-type EnvironmentAndSystemPropertySecretStore -s am.services.uma.pct.encryption -a new -m classic": should fail since no mappings can exist for the EnvironmentAndSystemPropertySecretStore 2`] = `1`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create -gi default-keystore -s unknown.label -a new -m classic": should fail due to unknown label for the secret id 1`] = `
"✖ Error: Error creating mapping 'unknown.label' for the / realm secret store 'default-keystore'
Error creating mapping 'unknown.label' for the / realm secret store 'default-keystore'
  Network error:
    URL: http://openam-frodo-dev.classic.com:8080/am/json/global-config/secrets/stores/KeyStoreSecretStore/default-keystore/mappings?_action=create
    Status: 400
    Code: ERR_BAD_REQUEST
    Reason: Bad Request
    Message: Data validation failed for the attribute, Secret Label
"
`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create -gi default-keystore -s unknown.label -a new -m classic": should fail due to unknown label for the secret id 2`] = `1`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create -i ESV -s am.services.httpclient.mtls.servertrustcerts.testServerCert.secret -a esv-test-server-cert": should create mapping for the ESV secret store 1`] = `""`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create -i ESV -s am.services.httpclient.mtls.servertrustcerts.testServerCert.secret -a esv-test-server-cert": should create mapping for the ESV secret store 2`] = `
"✔ Created the mapping am.services.httpclient.mtls.servertrustcerts.testServerCert.secret in the secret store ESV.
"
`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create -i ESV -t GoogleSecretManagerSecretStoreProvider -s am.services.httpclient.mtls.servertrustcerts.testServerCert.secret -a esv-test-server-cert": should fail since mapping already exists 1`] = `
"✖ Error: Error creating mapping 'am.services.httpclient.mtls.servertrustcerts.testServerCert.secret' for the alpha realm secret store 'ESV'
Error creating mapping 'am.services.httpclient.mtls.servertrustcerts.testServerCert.secret' for the alpha realm secret store 'ESV'
  Network error:
    URL: https://openam-frodo-dev.forgeblocks.com/am/json/realms/root/realms/alpha/realm-config/secrets/stores/GoogleSecretManagerSecretStoreProvider/ESV/mappings?_action=create
    Status: 409
    Code: ERR_BAD_REQUEST
    Reason: Conflict
    Message: Unable to save config: Service already exists
"
`;

exports[`frodo secretstore mapping create "frodo secretstore mapping create -i ESV -t GoogleSecretManagerSecretStoreProvider -s am.services.httpclient.mtls.servertrustcerts.testServerCert.secret -a esv-test-server-cert": should fail since mapping already exists 2`] = `1`;
